# maps-scrapper

./: .gitignore  README.md  pyproject.toml
src/: osm.py
src/maps_scrapper/: __init__.py  __main__.py  extractor.py  models.py  osm.py  scraper.py  writers.py
