[project]
name = "maps-scrapper"
version = "0.1.0"
description = "Get data from maps like google maps or osm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.59.0",
]

[project.scripts]
maps-scrap = "maps_scrapper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maps_scrapper"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify
]
ignore = [
    "B008",  # function calls in default args (common in FastAPI/Prefect)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
